Add integration configuration docs

--- a/docs-v2/reference/cli.mdx
+++ b/docs-v2/reference/cli.mdx
@@ -78,3 +78,7 @@ NANGO_CLI_UPGRADE_MODE=prompt # Default value
 NANGO_DEPLOY_AUTO_CONFIRM=false # Default value
 ```
 
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
+
