--- a/docs-v2/reference/overview.mdx
+++ b/docs-v2/reference/overview.mdx
@@ -55,3 +55,7 @@ Sync APIs from your app with the Nango HTTP API & backend SDKs.
         Build custom integrations in code.
     </Card>
 </CardGroup>
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
