--- a/docs-v2/reference/sdks/frontend.mdx
+++ b/docs-v2/reference/sdks/frontend.mdx
@@ -171,3 +171,7 @@ const result = nango.auth('<INTEGRATION-ID>', '<CONNECTION-ID>', {
     </Expandable>
   </ResponseField>
 </Expandable>
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
