--- a/docs-v2/reference/sdks/node.mdx
+++ b/docs-v2/reference/sdks/node.mdx
@@ -1333,3 +1333,7 @@ The response from the external API is passed back to you exactly as Nango gets i
 - response headers
 - response body
 </Expandable>
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
