--- a/docs-v2/understand/architecture.mdx
+++ b/docs-v2/understand/architecture.mdx
@@ -50,3 +50,7 @@ Nango offers the flexibility to be [self-hosted](/host/cloud), appealing to ente
 # Conclusion
 
 Nango's infrastructure is designed for scalability, reliability, and flexibility, supporting the full range of integration scenarios. From handling real-time actions to managing complex sync schedules, each component plays a crucial role in delivering a seamless integration experience. Whether utilized as a cloud service or deployed in a self-hosted environment, Nango provides the foundation for a robust and tailored API integration infrastructure.
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
