--- a/docs-v2/understand/concepts/actions.mdx
+++ b/docs-v2/understand/concepts/actions.mdx
@@ -66,3 +66,7 @@ Actions focus solely on immediate tasks without persisting data to Nango's cache
 # Getting started with actions
 
 Check out the actions [step-by-step guide](/integrate/guides/perform-workflows-with-an-api) or refer to the reference ([API](/reference/api/action/trigger) / [SDK](/reference/sdks/node#actions)).
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
