--- a/docs-v2/understand/concepts/connections.mdx
+++ b/docs-v2/understand/concepts/connections.mdx
@@ -30,3 +30,7 @@ Besides metadata, connections also include configuration details—set either by
 # Getting started with using Connections
 
 Check out the authorization [step-by-step guide](/integrate/guides/authorize-an-api) or refer to the reference ([API](/reference/api/connection/list) / [SDK](/reference/sdks/node#connections)).
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
