--- a/docs-v2/understand/concepts/environments.mdx
+++ b/docs-v2/understand/concepts/environments.mdx
@@ -32,3 +32,7 @@ These environment-specific settings ensure your integrations can operate under d
 # Default and additional environments
 
 By default, Nango provides two environments: Development (Dev) and Production (Prod). If your project requires more nuanced staging environments, you're welcome to request additional ones via our [community](https://nango.dev/slack).
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
