--- a/docs-v2/understand/concepts/integrations.mdx
+++ b/docs-v2/understand/concepts/integrations.mdx
@@ -77,3 +77,7 @@ Each API configuration in the `providers.yaml` includes several key pieces of in
 - **Custom authorization systems:** APIs requiring unique authorization methods are supported with custom configurations. Nango's team is ready to implement specific handling as needed.
 
 Consult the [reference](/reference/api-configuration) for all configuration options and [past contributions](https://github.com/NangoHQ/nango/pulls?q=is%3Apr+is%3Amerged+label%3Aapi+) for examples.
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
