--- a/docs-v2/understand/concepts/proxy.mdx
+++ b/docs-v2/understand/concepts/proxy.mdx
@@ -39,4 +39,6 @@ The Proxy is available for free on Nango Cloud.
 
 Check out the Proxy [step-by-step guide](/integrate/guides/proxy-requests-to-an-api) or refer to the reference ([API](/reference/api/proxy/get) / [SDK](/reference/sdks/node#proxy)) for full details on proxy options.
 
-
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
