--- a/docs-v2/understand/concepts/scripts.mdx
+++ b/docs-v2/understand/concepts/scripts.mdx
@@ -122,3 +122,7 @@ Each script creates one or more endpoints within Nango, as defined in your [inte
 
 Nango dynamically generates references for these endpoints, accessible via the _API Reference_ tab in the integration section of the Nango UI. Once scripts are enabled — whether templates or custom — you can utilize Nango's unified API without needing detailed knowledge of the script internals. This abstraction simplifies API consumption, making it more accessible and manageable.
 
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
+
