--- a/docs-v2/understand/core-concepts.mdx
+++ b/docs-v2/understand/core-concepts.mdx
@@ -37,3 +37,7 @@ Developers use the unified API provided by Nango to interact with various extern
 **Build integration: Nango to external APIs** 
 
 Here lies Nango's unique value proposition. Unlike traditional unified APIs, Nango allows you to customize how it interacts with each external API through scripts. This means that while the interface from your app to Nango remains unified, the communication from Nango to external APIs offers unprecedented flexibility to meet your specific requirements.
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
