--- a/docs-v2/understand/concepts/syncs.mdx
+++ b/docs-v2/understand/concepts/syncs.mdx
@@ -14,9 +14,9 @@ Syncs replicate external data into Nango, according to a predefined schedule. Yo
 Syncs are designed to replicate data in a structured manner, transforming it into a list of records that adhere to a predefined model. This model, detailed within the [sync configuration](/understand/concepts/scripts#integration-configuration), outlines the fields (and their data types) of the output records.
 
 # Scheduling and execution
-The execution of syncs is based on a schedule that you configure, which can be as frequent as every 5 minutes depending on your plan. Each execution updates the dataset with the latest data from the external API for every connection under the integration. You have the flexibility to start syncs for individual connections or set them to automatically begin for new connections, managed through the Nango UI or [API](/reference/overview).
+The execution of syncs is based on a schedule you configure, which can be as frequent as every 5 minutes, depending on your plan. Each execution updates the dataset with the latest data from the external API for every connection under the integration. You can start syncs for individual connections or set them to begin for all connections automatically ([reference](/reference/integration-configuration#adding-a-sync)).
 
-Sync schedules & executions can be actively managed per connection through the Nango UI or API, including starting/pausing schdules & canceling/triggering executions. [Incremental syncs](#incremental-syncs) let you initiate a full refresh, effectively resetting the synced dataset.
+Sync schedules & executions can be actively managed per connection through the Nango UI or API, including starting/pausing schedules & canceling/triggering executions. [Incremental syncs](#incremental-syncs) let you initiate a full refresh, effectively resetting the synced dataset.
 
 # Sync endpoints and data caching
 Enabled syncs provide access to an endpoint for fetching all synced records, stored within a Nango cache. This highly-available caching supports essential syncing mechanisms like data deduplication, change detection, and heavy replications.
@@ -89,3 +89,7 @@ Syncs can have records that conform to a [unified model](/understand/concepts/ap
 # Getting started with syncs
 
 Check out the syncs [step-by-step guide](/integrate/guides/sync-data-from-an-api) or refer to the reference ([API](/reference/api/sync/records-list) / [SDK](/reference/sdks/node#syncs)).
+
+<Tip>
+**Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
+</Tip>
