Add scripts reference

--- a/docs-v2/reference/integration-configuration.mdx
+++ b/docs-v2/reference/integration-configuration.mdx
@@ -4,7 +4,8 @@ sidebarTitle: 'Integration config (nango.yaml)'
 icon: 'arrow-right-arrow-left'
 ---
 
-Example of an integration configuration: 
+# Example
+
 ```yaml nango.yaml
 integrations:
   asana: # Integration ID.
