--- a/docs-v2/reference/integration-configuration.mdx
+++ b/docs-v2/reference/integration-configuration.mdx
@@ -1,8 +1,10 @@
 ---
-title: 'Integration configuration (nango.yaml)'
+title: 'Integration configuration reference (nango.yaml)'
 sidebarTitle: 'Integration config (nango.yaml)'
 icon: 'arrow-right-arrow-left'
 ---
+
+Integrations are configured in the `nango.yaml` file, which lives in your code base ([learn more](/understand/concepts/scripts#integration-configuration)).
 
 # Example
 
